Fixed image spacing issue on cards

--- a/assets/style.scss
+++ b/assets/style.scss
@@ -134,6 +134,7 @@ ul {
 }
 
 .card-image img {
+    display: block;
     width: 100%;
 }
 
